--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "node test.js",
-    "prove01": "nodemon prove01.js"    
+    "test": "node test.js"  
   },
   "dependencies": {
     "ejs": "^2.5.6",
