--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "node test.js"  
+    "test": "node test.js"
   },
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.17.1",
     "express-handlebars": "^3.0.2",
+    "mongodb": "^3.6.6",
     "nodemon": "^2.0.7",
     "pug": "^2.0.4"
   },
