--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
+    "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "dotenv": "^9.0.2",
     "ejs": "^2.5.6",
     "express": "^4.17.1",
