--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.4.4",
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.4.1",
@@ -21,8 +22,10 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.0.2",
     "express-session": "^1.17.1",
+    "express-validator": "^6.11.1",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.7",
+    "nodemailer": "^6.6.0",
     "nodemon": "^2.0.7",
     "pug": "^2.0.4"
   },
