--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.6.0",
     "nodemon": "^2.0.7",
-    "pug": "^2.0.4"
+    "pug": "^2.0.4",
+    "socket.io": "^4.1.2",
+    "socket.io-client": "^4.1.2"
   },
   "devDependencies": {
     "request": "^2.81.0",
